Update and rename 2018-01-24-discord.md to 2018-01-24-Discord.md

--- a/_posts/2018-01-24-Discord.md
+++ b/_posts/2018-01-24-Discord.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "discord"
+title:  "Discord"
 date:   2018-01-24
 excerpt: "Join our Discord to stay informed and collab with others."
 tag:
